updated menu page and nav overlaping fixed

--- a/css/style.css
+++ b/css/style.css
@@ -292,6 +292,7 @@
       height: 200px;
       border-radius: 5px;
       object-fit: cover;
+      transition: all .3s ease-in-out ;
       -webkit-transition: all .3s ease-in-out;
       -moz-transition: all .3s ease-in-out;
       -o-transition: all .3s ease-in-out;
@@ -332,10 +333,11 @@
   /* Small devices (landscape phones, less than 768px) */
   
   @media (max-width: 767.98px) {
-      /* #navbar1 {
+     #navbar1 {
           position: relative !important;
           background-color: black !important;
-      } */
+          padding: 4px 4px !important;
+      } 
       .orderNowbtn {
           background-color: rgb(253, 90, 90);
           color: white;
